--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 body {
   margin: 0;
-  height: 150vh; /* Ensures the background fills the full viewport height */
   background-image: url('https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309425/R1-07284-0009_coyi1f.jpg');
   background-color: black;
-  background-size: cover; /* Ensures the image covers the entire area */
-  background-position: center; /* Centers the image */
+  background-size: cover;
+  background-position: center center; /* Centers the image */
   background-repeat: no-repeat; /* Prevents the image from repeating */
   font-family: Arial, sans-serif; /* Optional: Sets a global font style */
-  color: white;
+  background-attachment: fixed;
 }
 
 code {
